# nonmanifold-minimal-surfaces

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake  FindPolyscope.cmake  Findlibigl.cmake
src/: main.cpp
